dropdown max-height, overflow fix

--- a/components/for_pages/CatalogPage/GamesListTop/index.module.scss
+++ b/components/for_pages/CatalogPage/GamesListTop/index.module.scss
@@ -2,8 +2,9 @@
 
 .root {
   @include componentRoot;
-  overflow-x: auto;
-  overflow-y: hidden;
+  @media screen and (max-width: 550px){
+    padding-right: 0;
+  }
 }
 
 .none{
@@ -12,6 +13,7 @@
 
 .wrapper{
   display: flex;
+  overflow-x: auto;
   div{
     flex-shrink: 0;
   }
@@ -26,7 +28,9 @@
   display: flex;
   padding-left: 23px;
   flex-wrap: nowrap;
-  @media screen and (max-width: 400px){
+  overflow-x: auto;
+  @media screen and (max-width: 550px){
+    padding-right: 23px;
     padding-left: 0;
   }
 }
