--- a/components/ui/TabSelect/index.module.scss
+++ b/components/ui/TabSelect/index.module.scss
@@ -14,6 +14,8 @@ max-width: 280px;
   background: #ffffff;
   opacity: 0;
   visibility: hidden;
+  max-height: 200px;
+  overflow-y: auto;
   //transform: translateY(-20px);
   //transition: opacity 0.4s ease, transform 0.4s ease, visibility 0.4s;
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.1);
